[gd_scene load_steps=14 format=3 uid="uid://baatg8r1fex7a"]

[ext_resource type="Script" path="res://scenes/lava_floor.gd" id="1_ai3i8"]
[ext_resource type="Texture2D" uid="uid://1v0wfgc2xk7f" path="res://assets/sprites/Red Effect Bullet Impact Explosion 32x32.png" id="1_am1sa"]
[ext_resource type="Texture2D" uid="uid://o6hjmlmwk4el" path="res://assets/sprites/Green Effect Bullet Impact Explosion 32x32.png" id="2_j5orr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cw3g4"]
size = Vector2(27, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0qyg"]
atlas = ExtResource("2_j5orr")
region = Rect2(352, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixb2m"]
atlas = ExtResource("2_j5orr")
region = Rect2(384, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83vcq"]
atlas = ExtResource("2_j5orr")
region = Rect2(416, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkqf8"]
atlas = ExtResource("2_j5orr")
region = Rect2(448, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw68q"]
atlas = ExtResource("1_am1sa")
region = Rect2(352, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oy8k"]
atlas = ExtResource("1_am1sa")
region = Rect2(384, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dvul"]
atlas = ExtResource("1_am1sa")
region = Rect2(416, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04xyh"]
atlas = ExtResource("1_am1sa")
region = Rect2(448, 384, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kgpcf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0qyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixb2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83vcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkqf8")
}],
"loop": true,
"name": &"activation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw68q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oy8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dvul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04xyh")
}],
"loop": true,
"name": &"damage_phase",
"speed": 10.0
}]

[node name="LavaFloor" type="Node2D"]
script = ExtResource("1_ai3i8")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 8)
shape = SubResource("RectangleShape2D_cw3g4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kgpcf")
animation = &"damage_phase"
autoplay = "damage_phase"

[node name="DecayTimer" type="Timer" parent="."]
one_shot = true

[node name="ActivationTimer" type="Timer" parent="."]
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_decay_timer_timeout"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_activation_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
